--- a/.github/workflows/social-generator.yml
+++ b/.github/workflows/social-generator.yml
@@ -10,7 +10,7 @@ jobs:
         name: OpenAI Completion
         id: openai_completion
         with:
-          prompt: "act as a software expert in team topologies and write a tweets that explain the importance of platform teams"
+          prompt: "act as a software expert in team topologies and write a tweets that explain the importance of platform teams, do not quote the text"
         env:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
       - uses: actions/github-script@v5
