--- a/.github/workflows/social-generator.yml
+++ b/.github/workflows/social-generator.yml
@@ -16,4 +16,4 @@ jobs:
       - uses: actions/github-script@v5
         name: Print the response text
         with:
-          script:  console.log(JSON.parse('${{ steps.openai_completion.outputs.response }}'.replace(/\\/g,"").replace(/""/g,'"')).choices[0].message.content)
+          script:  console.log(JSON.parse(`${{ steps.openai_completion.outputs.response }}`.replace(/\\/g,"").replace(/""/g,'"')).choices[0].message.content)
