--- a/.github/workflows/social-generator.yml
+++ b/.github/workflows/social-generator.yml
@@ -17,3 +17,12 @@ jobs:
         name: Print the response text
         with:
           script:  console.log(JSON.parse(`${{ steps.openai_completion.outputs.response }}`.replace(/\\/g,"").replace(/""/g,'"')).choices[0].message.content)
+      - name: Create a Trello Card
+        uses: TrisNol/trello-create-card-action@main
+        with:
+          api_key: ${{ secrets.TRELLO_API_KEY }}
+          token: ${{ secrets.TRELLO_TOKEN }}
+          board_id: "1Z2Y5C9q"
+          list_name: "Backlog"
+          card_name: JSON.parse(`${{ steps.openai_completion.outputs.response }}`.replace(/\\/g,"").replace(/""/g,'"')).choices[0].message.content
+          card_description: ""
