--- a/.github/workflows/social-generator.yml
+++ b/.github/workflows/social-generator.yml
@@ -24,5 +24,5 @@ jobs:
           token: ${{ secrets.TRELLO_TOKEN }}
           board_id: "1Z2Y5C9q"
           list_name: "Backlog"
-          card_name: "test"
-          card_description: "test"
+          card_name: ${{ JSON.parse(`${{ steps.openai_completion.outputs.response }}`.replace(/\\/g,"").replace(/""/g,'"')).choices[0].message.content }}
+          card_description: ""
