--- a/.github/workflows/social-generator.yml
+++ b/.github/workflows/social-generator.yml
@@ -15,8 +15,9 @@ jobs:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
       - uses: actions/github-script@v5
         name: Print the response text
+        id: openai_text
         with:
-          script:  console.log(JSON.parse(`${{ steps.openai_completion.outputs.response }}`.replace(/\\/g,"").replace(/""/g,'"')).choices[0].message.content)
+          script: core.setOutput("message",JSON.parse(`${{ steps.openai_completion.outputs.response }}`.replace(/\\/g,"").replace(/""/g,'"')).choices[0].message.content)
       - name: Create a Trello Card
         uses: TrisNol/trello-create-card-action@main
         with:
@@ -24,5 +25,5 @@ jobs:
           token: ${{ secrets.TRELLO_TOKEN }}
           board_id: "1Z2Y5C9q"
           list_name: "Backlog"
-          card_name: ${{ JSON.parse(`${{ steps.openai_completion.outputs.response }}`.replace(/\\/g,"").replace(/""/g,'"')).choices[0].message.content }}
+          card_name: ${{ steps.openai_text.outputs.message }}
           card_description: ""
